inizio modifiche stile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -44,37 +47,50 @@
         </header>
         <!--END HEADER-->
 
+        <div class="invisible"></div>
+
         <!--MAIN-->
         <main>
-            <div class="card-container">
-                <!--film section-->
+            <!--film section-->
+            <h2>FILM</h2>
+            <div class="card-container flex-row">
                 <!-------1h. aggiungo il v-for per popolare resultMovie e stampo-------->
-                <div class="card" id="film" v-for="movie in resultMovie">
-                    <!-------3a. aggiungo la copertina dei film-------->
-                    <img class="poster" :src="`https://image.tmdb.org/t/p/w342/${movie.poster_path}`" alt="">
-                    <div class="titolo">Titolo: {{ movie.title }}</div>
-                    <div class="titolo-originale">Titolo originale: {{ movie.original_title }}</div>
-                    <div class="flag">
-                        <!-------2b. aggiungo il v-if con gli oggetti in flagImages-------->
-                        Lingua:
-                        <img v-if="movie.original_language in flagsImages" :src="flagsImages[movie.original_language]" :alt="movie.original_language">
-                        <div v-else>{{ movie.original_language }}</div>
-                    </div>
-                    <div class="voto">Voto: {{ movie.vote_average }} /10</div>
-                    <!-------3c. aggiungo il v-for per le stelle "piene" in base al voto-------->
-                    <!-------3d. aggiungo il v-for per le stelle totali a cui sotrarre quelle piene in base al voto-------->
-                    <div class="star">
-                        <i v-for="star in starsVote(movie.vote_average)" class="fas fa-star"></i> 
-                        <i v-for="star in (5 - starsVote(movie.vote_average))" class="far fa-star"></i>
+                <div class="card" v-for="movie in resultMovie">
+                    <div class="poster">
+                        <!-------3a. aggiungo la copertina dei film-------->
+                        <img :src="`https://image.tmdb.org/t/p/w342/${movie.poster_path}`" alt="">
+                   
+
+                        <div class="titolo">Titolo: {{ movie.title }}</div>
+                        <div class="titolo-originale">Titolo originale: {{ movie.original_title }}</div>
+                        <div class="flag">
+                            <!-------2b. aggiungo il v-if con gli oggetti in flagImages-------->
+                            Lingua:
+                            <img v-if="movie.original_language in flagsImages" :src="flagsImages[movie.original_language]" :alt="movie.original_language">
+                            <div v-else>{{ movie.original_language }}</div>
+                        </div>
+                        <div class="voto">Voto: {{ movie.vote_average }} /10</div>
+                        <!-------3c. aggiungo il v-for per le stelle "piene" in base al voto-------->
+                        <!-------3d. aggiungo il v-for per le stelle totali a cui sotrarre quelle piene in base al voto-------->
+                        <div class="star">
+                            <i v-for="star in starsVote(movie.vote_average)" class="fas fa-star"></i> 
+                            <i v-for="star in (5 - starsVote(movie.vote_average))" class="far fa-star"></i>
+                        </div>
                     </div>
                 </div>
-                <!--end film section-->
+            </div>
+            <!--end film section-->
 
-                <!--serie section-->
+
+            <!--serie section-->
+            <h2>SERIE</h2>
+            <div class="card-container flex-row">
                 <!-------2e. aggiungo la parte dedicata alle serie-------->
-                <div class="card" id="serie" v-for="serie in resultSerie">
+                <div class="card" v-for="serie in resultSerie">
                     <!-------3a. aggiungo la copertina delle serie-------->
                     <img class="poster" :src="`https://image.tmdb.org/t/p/w342/${serie.poster_path}`" alt="">
+                   
+
                     <div class="titolo">Titolo: {{ serie.name}}</div>
                     <div class="titolo-originale">Titolo originale: {{ serie.original_name }}</div>
                     <div class="flag">
@@ -90,8 +106,8 @@
                         <i v-for="star in (5 - starsVote(serie.vote_average))" class="far fa-star"></i>
                     </div>
                 </div>
-                <!--end serie section-->
             </div>
+            <!--end serie section-->
         </main>
         <!--END MAIN-->
 
