--- a/index.html
+++ b/index.html
@@ -54,30 +54,27 @@
             <div class="card-container">
                 <!-------1h. aggiungo il v-for per popolare resultMovie e stampo-------->
                 <div class="card" v-for="movie in resultMovie">
-                    <div class="poster">
-                        <!-------3a. aggiungo la copertina dei film-------->
-                        <img :src="`https://image.tmdb.org/t/p/w342/${movie.poster_path}`" alt="">
-
-                        <ul>
-                            <li>
-                                <div class="titolo">{{ movie.title }}</div>
-                                <div class="titolo-originale">Titolo originale: {{ movie.original_title }}</div>
-                                <div class="flag">
-                                    <!-------2b. aggiungo il v-if con gli oggetti in flagImages-------->
-                                    Lingua:
-                                    <img v-if="movie.original_language in flagsImages" :src="flagsImages[movie.original_language]" :alt="movie.original_language">
-                                    <div v-else>{{ movie.original_language }}</div>
-                                </div>
-                                <div class="voto">Voto: {{ movie.vote_average }} /10</div>
-                                <!-------3c. aggiungo il v-for per le stelle "piene" in base al voto-------->
-                                <!-------3d. aggiungo il v-for per le stelle totali a cui sotrarre quelle piene in base al voto-------->
-                                <div class="star">
-                                    <i v-for="star in starsVote(movie.vote_average)" class="fas fa-star"></i> 
-                                    <i v-for="star in (5 - starsVote(movie.vote_average))" class="far fa-star"></i>
-                                </div>
-                            </li>
-                        </ul>
+                    <!-------3a. aggiungo la copertina dei film-------->
+                    <img :src="`https://image.tmdb.org/t/p/w342/${movie.poster_path}`" alt="">
+                    <!--card back-->
+                    <div class="card-back">
+                        <div class="titolo">{{ movie.title }}</div>
+                        <div class="titolo-originale">Titolo originale: {{ movie.original_title }}</div>
+                        <div class="flag">
+                            <!-------2b. aggiungo il v-if con gli oggetti in flagImages-------->
+                            Lingua:
+                            <img v-if="movie.original_language in flagsImages" :src="flagsImages[movie.original_language]" :alt="movie.original_language">
+                            <div v-else>{{ movie.original_language }}</div>
+                        </div>
+                        <div class="voto">Voto: {{ movie.vote_average }} /10</div>
+                        <!-------3c. aggiungo il v-for per le stelle "piene" in base al voto-------->
+                        <!-------3d. aggiungo il v-for per le stelle totali a cui sotrarre quelle piene in base al voto-------->
+                        <div class="star">
+                            <i v-for="star in starsVote(movie.vote_average)" class="fas fa-star"></i> 
+                            <i v-for="star in (5 - starsVote(movie.vote_average))" class="far fa-star"></i>
+                        </div>
                     </div>
+                    <!--end card back-->
                 </div>
             </div>
             <!--end film section-->
@@ -90,22 +87,24 @@
                 <div class="card" v-for="serie in resultSerie">
                     <!-------3a. aggiungo la copertina delle serie-------->
                     <img class="poster" :src="`https://image.tmdb.org/t/p/w342/${serie.poster_path}`" alt="">
-                   
-
-                    <div class="titolo">{{ serie.name}}</div>
-                    <div class="titolo-originale">Titolo originale: {{ serie.original_name }}</div>
-                    <div class="flag">
-                        Lingua:
-                        <img v-if="serie.original_language in flagsImages" :src="flagsImages[serie.original_language]" :alt="serie.original_language">
-                        <div v-else>{{ serie.original_language }}</div>
+                    <!--card back-->
+                    <div class="card-back">
+                        <div class="titolo">{{ serie.name}}</div>
+                        <div class="titolo-originale">Titolo originale: {{ serie.original_name }}</div>
+                        <div class="flag">
+                            Lingua:
+                            <img v-if="serie.original_language in flagsImages" :src="flagsImages[serie.original_language]" :alt="serie.original_language">
+                            <div v-else>{{ serie.original_language }}</div>
+                        </div>
+                        <div class="voto">Voto:  {{ serie.vote_average }} /10</div>
+                        <!-------3c. aggiungo il v-for per le stelle "piene" in base al voto-------->
+                        <!-------3d. aggiungo il v-for per le stelle totali a cui sotrarre quelle piene in base al voto-------->
+                        <div class="star">
+                            <i v-for="star in starsVote(serie.vote_average)" class="fas fa-star"></i> 
+                            <i v-for="star in (5 - starsVote(serie.vote_average))" class="far fa-star"></i>
+                        </div>
                     </div>
-                    <div class="voto">Voto:  {{ serie.vote_average }} /10</div>
-                    <!-------3c. aggiungo il v-for per le stelle "piene" in base al voto-------->
-                    <!-------3d. aggiungo il v-for per le stelle totali a cui sotrarre quelle piene in base al voto-------->
-                    <div class="star">
-                        <i v-for="star in starsVote(serie.vote_average)" class="fas fa-star"></i> 
-                        <i v-for="star in (5 - starsVote(serie.vote_average))" class="far fa-star"></i>
-                    </div>
+                    <!--end card back-->  
                 </div>
             </div>
             <!--end serie section-->
