--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <!--sezione logo-->
                 <div class="section-logo">
-                    <h1>boolflix</h1>
+                    <img src="https://fontmeme.com/permalink/210503/66d3aff498fa41dd44d379aa544cf165.png" alt="">
                 </div>
                 <!--end sezione logo-->
 
@@ -78,7 +78,6 @@
                 </div>
             </div>
             <!--end film section-->
-
 
             <!--serie section-->
             <h3>SERIE</h3>
